--- a/datafusion/substrait/Cargo.toml
+++ b/datafusion/substrait/Cargo.toml
@@ -39,6 +39,7 @@ itertools = { workspace = true }
 object_store = { workspace = true }
 pbjson-types = { workspace = true }
 prost = { workspace = true }
+recursive = { workspace = true, optional = true }
 substrait = { version = "0.57", features = ["serde"] }
 url = { workspace = true }
 tokio = { workspace = true, features = ["fs"] }
@@ -54,6 +55,7 @@ insta = { workspace = true }
 default = ["physical"]
 physical = ["datafusion/parquet"]
 protoc = ["substrait/protoc"]
+recursive_protection = ["dep:recursive", "datafusion/recursive_protection"]
 
 [package.metadata.docs.rs]
 # Use default features ("physical") for docs, plus "protoc". "protoc" is needed
